--- a/notebooks/W03. Spatial Data.ipynb
+++ b/notebooks/W03. Spatial Data.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "alY6eayO1uAY"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "DArwH58V12Pu"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -598,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -689,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "JA1ATGEsf8QF",
         "colab": {
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -801,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -860,7 +860,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "NonkXQSCjZZV",
         "colab": {
@@ -915,7 +915,7 @@
         "id": "CXILLRyRqjfT",
         "outputId": "a91bcbae-4d73-482e-d4a4-1c3b5a9595fc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1329,7 +1329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "XEMD4htxGe2E",
         "colab": {
@@ -1414,7 +1414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "CiGZhFDNqD-W",
         "colab": {
@@ -1482,7 +1482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1554,7 +1554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1618,7 +1618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1705,7 +1705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1762,7 +1762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1823,7 +1823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "Rk5UEgvBpQKY",
         "colab": {
@@ -2167,12 +2167,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "ks1pMWnwrZuM"
+        "id": "ks1pMWnwrZuM",
+        "outputId": "5f7dcd4d-ab3b-4139-95f5-001c57a556b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 721,
+          "referenced_widgets": [
+            "5c432e4bb9ee4def93ef78af340f42d9",
+            "fc0e4a62d4d14887bfe01165447504ca",
+            "857889a835b0458e8bfd6784e445cea7",
+            "749a1faa087c449a8b25575a59433154",
+            "b64e99e116044436a306a74b94c2ee0e",
+            "a1d022faadd642a19744818c5976b808",
+            "0c533b32226f47c1b420084606b6d42a",
+            "141848dbb26644649bc74079a85f704c"
+          ]
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Map(center=[36.77, -119.41], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom…"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "5c432e4bb9ee4def93ef78af340f42d9"
+            }
+          },
+          "metadata": {
+            "application/vnd.jupyter.widget-view+json": {
+              "colab": {
+                "custom_widget_manager": {
+                  "url": "https://ssl.gstatic.com/colaboratory-static/widgets/colab-cdn-widget-manager/b3e629b1971e1542/manager.min.js"
+                }
+              }
+            }
+          }
+        }
+      ],
+      "source": [
+        "# let create an interactive Map object called \"satellite_map\"\n",
+        "satellite_map = Map(\n",
+        "  basemap=basemap_to_tiles( #this function lets us pick from a list of basemaps for our interactive map\n",
+        "    basemaps.NASAGIBS.ViirsEarthAtNight2012, \"2020-09-15\" # here we're specifying that we want MODIS imagery, and the date that we want it from\n",
+        "  ),\n",
+        "  center=(36.77, -119.41), # then, we want to center the map on california. these coordinates do that\n",
+        "  zoom=5, #finally, we want to set the zoom level of the map.\n",
+        ")\n",
+        "\n",
+        "# once we've created the map object we can make it bigger or smaller. let's make it 700 pixels tall.\n",
+        "satellite_map.layout.height = '700px'\n",
+        "\n",
+        "# now, we visualize it.\n",
+        "satellite_map"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -24073,6 +24126,299 @@
             "stroke": true,
             "subitems": [],
             "weight": 5
+          }
+        },
+        "5c432e4bb9ee4def93ef78af340f42d9": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletMapModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletMapModel",
+            "_view_count": null,
+            "_view_module": "jupyter-leaflet",
+            "_view_module_version": "^0.17",
+            "_view_name": "LeafletMapView",
+            "bottom": 3545,
+            "bounce_at_zoom_limits": true,
+            "box_zoom": true,
+            "center": [
+              36.77,
+              -119.41
+            ],
+            "close_popup_on_click": true,
+            "controls": [
+              "IPY_MODEL_fc0e4a62d4d14887bfe01165447504ca",
+              "IPY_MODEL_857889a835b0458e8bfd6784e445cea7"
+            ],
+            "crs": {
+              "name": "EPSG3857",
+              "custom": false
+            },
+            "default_style": "IPY_MODEL_749a1faa087c449a8b25575a59433154",
+            "double_click_zoom": true,
+            "dragging": true,
+            "dragging_style": "IPY_MODEL_b64e99e116044436a306a74b94c2ee0e",
+            "east": -90.52734375,
+            "fullscreen": false,
+            "inertia": true,
+            "inertia_deceleration": 3000,
+            "inertia_max_speed": 1500,
+            "interpolation": "bilinear",
+            "keyboard": true,
+            "keyboard_pan_offset": 80,
+            "keyboard_zoom_offset": 1,
+            "layers": [
+              "IPY_MODEL_a1d022faadd642a19744818c5976b808"
+            ],
+            "layout": "IPY_MODEL_0c533b32226f47c1b420084606b6d42a",
+            "left": 722,
+            "max_zoom": null,
+            "min_zoom": null,
+            "modisdate": "2023-11-05",
+            "north": 48.07807894349862,
+            "options": [
+              "bounce_at_zoom_limits",
+              "box_zoom",
+              "center",
+              "close_popup_on_click",
+              "double_click_zoom",
+              "dragging",
+              "fullscreen",
+              "inertia",
+              "inertia_deceleration",
+              "inertia_max_speed",
+              "interpolation",
+              "keyboard",
+              "keyboard_pan_offset",
+              "keyboard_zoom_offset",
+              "max_zoom",
+              "min_zoom",
+              "prefer_canvas",
+              "scroll_wheel_zoom",
+              "tap",
+              "tap_tolerance",
+              "touch_zoom",
+              "world_copy_jump",
+              "zoom",
+              "zoom_animation_threshold",
+              "zoom_delta",
+              "zoom_snap"
+            ],
+            "panes": {},
+            "prefer_canvas": false,
+            "right": 2036,
+            "scroll_wheel_zoom": false,
+            "south": 23.523700058824144,
+            "style": "IPY_MODEL_141848dbb26644649bc74079a85f704c",
+            "tap": true,
+            "tap_tolerance": 15,
+            "top": 2845,
+            "touch_zoom": true,
+            "west": -148.27148437500003,
+            "window_url": "https://nddjekikhzk-496ff2e9c6d22116-0-colab.googleusercontent.com/outputframe.html?vrz=colab_20231102-060217_RC01_579230399",
+            "world_copy_jump": false,
+            "zoom": 5,
+            "zoom_animation_threshold": 4,
+            "zoom_delta": 1,
+            "zoom_snap": 1
+          }
+        },
+        "fc0e4a62d4d14887bfe01165447504ca": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletZoomControlModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletZoomControlModel",
+            "_view_count": null,
+            "_view_module": "jupyter-leaflet",
+            "_view_module_version": "^0.17",
+            "_view_name": "LeafletZoomControlView",
+            "options": [
+              "position",
+              "zoom_in_text",
+              "zoom_in_title",
+              "zoom_out_text",
+              "zoom_out_title"
+            ],
+            "position": "topleft",
+            "zoom_in_text": "+",
+            "zoom_in_title": "Zoom in",
+            "zoom_out_text": "-",
+            "zoom_out_title": "Zoom out"
+          }
+        },
+        "857889a835b0458e8bfd6784e445cea7": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletAttributionControlModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletAttributionControlModel",
+            "_view_count": null,
+            "_view_module": "jupyter-leaflet",
+            "_view_module_version": "^0.17",
+            "_view_name": "LeafletAttributionControlView",
+            "options": [
+              "position",
+              "prefix"
+            ],
+            "position": "bottomright",
+            "prefix": "ipyleaflet"
+          }
+        },
+        "749a1faa087c449a8b25575a59433154": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletMapStyleModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletMapStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "cursor": "grab"
+          }
+        },
+        "b64e99e116044436a306a74b94c2ee0e": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletMapStyleModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletMapStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "cursor": "move"
+          }
+        },
+        "a1d022faadd642a19744818c5976b808": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletTileLayerModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletTileLayerModel",
+            "_view_count": null,
+            "_view_module": "jupyter-leaflet",
+            "_view_module_version": "^0.17",
+            "_view_name": "LeafletTileLayerView",
+            "attribution": "Imagery provided by services from the Global Imagery Browse Services (GIBS), operated by the NASA/GSFC/Earth Science Data and Information System (<a href=\"https://earthdata.nasa.gov\">ESDIS</a>) with funding provided by NASA/HQ.",
+            "base": true,
+            "bottom": true,
+            "bounds": null,
+            "detect_retina": false,
+            "loading": false,
+            "max_native_zoom": null,
+            "max_zoom": 8,
+            "min_native_zoom": null,
+            "min_zoom": 1,
+            "name": "NASAGIBS.ViirsEarthAtNight2012",
+            "no_wrap": false,
+            "opacity": 1,
+            "options": [
+              "attribution",
+              "bounds",
+              "detect_retina",
+              "max_native_zoom",
+              "max_zoom",
+              "min_native_zoom",
+              "min_zoom",
+              "no_wrap",
+              "tile_size",
+              "tms",
+              "zoom_offset"
+            ],
+            "pane": "",
+            "popup": null,
+            "popup_max_height": null,
+            "popup_max_width": 300,
+            "popup_min_width": 50,
+            "show_loading": false,
+            "subitems": [],
+            "tile_size": 256,
+            "tms": false,
+            "url": "https://map1.vis.earthdata.nasa.gov/wmts-webmerc/VIIRS_CityLights_2012/default/2020-09-15/GoogleMapsCompatible_Level8/{z}/{y}/{x}.jpg",
+            "visible": true,
+            "zoom_offset": 0
+          }
+        },
+        "0c533b32226f47c1b420084606b6d42a": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": "700px",
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "141848dbb26644649bc74079a85f704c": {
+          "model_module": "jupyter-leaflet",
+          "model_name": "LeafletMapStyleModel",
+          "model_module_version": "^0.17",
+          "state": {
+            "_model_module": "jupyter-leaflet",
+            "_model_module_version": "^0.17",
+            "_model_name": "LeafletMapStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "cursor": "grab"
           }
         }
       }
