--- a/notebooks/W04. Natural Language Processing.ipynb
+++ b/notebooks/W04. Natural Language Processing.ipynb
@@ -907,24 +907,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FMtXvNgVgtMc",
-        "outputId": "7a35e1a2-2a43-4505-a18f-72a87ee49fb4"
+        "outputId": "64d52ca9-b751-437e-a83d-db48e0f5d898"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "11"
+              "51"
             ]
           },
-          "execution_count": 97,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 12
         }
       ],
       "source": [
@@ -937,6 +937,35 @@
         "# this returns a list of strings matching our search term.\n",
         "# the length of the list gives us the number of occurances\n",
         "len(climate_change)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# how many times is the phrase 'global warming' mentioned?\n",
+        "global_warming = re.findall(r'global warming', call['Text'], re.IGNORECASE)\n",
+        "\n",
+        "len(global_warming)"
+      ],
+      "metadata": {
+        "id": "7X6aD9JjisRS",
+        "outputId": "f6609c3e-66e5-4a21-e225-4b0d86a00ac2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
       ]
     },
     {
