--- a/notebooks/W04. Natural Language Processing.ipynb
+++ b/notebooks/W04. Natural Language Processing.ipynb
@@ -10285,12 +10285,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "ldyS7EtqnsTv"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "sample=pd.DataFrame(tweets.iloc[:100])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AVJ-NH51H8hT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
