--- a/notebooks/W05. Distributions and Basic Statistics.ipynb
+++ b/notebooks/W05. Distributions and Basic Statistics.ipynb
@@ -1107,37 +1107,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "id": "PYdTjEvARUqj",
-        "outputId": "7a0dd125-731a-497f-c771-20987087302f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d04221df-f904-421c-a953-d1a818830d7f"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "count     344287\n",
-              "unique         2\n",
-              "top            1\n",
-              "freq      175911\n",
-              "Name: sex, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "count     344287\n",
+            "unique         2\n",
+            "top            1\n",
+            "freq      175911\n",
+            "Name: sex, dtype: int64\n",
+            "count     344287\n",
+            "unique        51\n",
+            "top            6\n",
+            "freq       31116\n",
+            "Name: state, dtype: int64\n",
+            "count     344287.0\n",
+            "unique        20.0\n",
+            "top           12.0\n",
+            "freq      108988.0\n",
+            "Name: sch, dtype: float64\n",
+            "count     301908.0\n",
+            "unique         4.0\n",
+            "top            0.0\n",
+            "freq      245732.0\n",
+            "Name: union, dtype: float64\n",
+            "count     344287\n",
+            "unique        13\n",
+            "top            .\n",
+            "freq      132708\n",
+            "Name: occupation, dtype: object\n",
+            "count     344287\n",
+            "unique       699\n",
+            "top         7860\n",
+            "freq       18101\n",
+            "Name: ind, dtype: int64\n"
+          ]
         }
       ],
       "source": [
         "# convert the variables to categorical and describe\n",
         "\n",
         "df['sex']=df['sex'].astype('category')\n",
-        "df['sex'].describe()\n",
-        "\n"
+        "print(df['sex'].describe())\n",
+        "\n",
+        "df['state']=df['state'].astype('category')\n",
+        "print(df['state'].describe())\n",
+        "\n",
+        "df['sch']=df['sch'].astype('category')\n",
+        "print(df['sch'].describe())\n",
+        "\n",
+        "df['union']=df['union'].astype('category')\n",
+        "print(df['union'].describe())\n",
+        "\n",
+        "df['occupation']=df['occupation'].astype('category')\n",
+        "print(df['occupation'].describe())\n",
+        "\n",
+        "df['ind']=df['ind'].astype('category')\n",
+        "print(df['ind'].describe())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "STAR - what is up with the occupation data?"
+      ],
+      "metadata": {
+        "id": "oNJxLzcvCihe"
+      }
     },
     {
       "cell_type": "markdown",
