--- a/notebooks/W05. Distributions and Basic Statistics.ipynb
+++ b/notebooks/W05. Distributions and Basic Statistics.ipynb
@@ -129,14 +129,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
         "id": "muDRf4bjexKG",
-        "outputId": "4782689d-bc2e-4064-d28c-ead058cdaf5b"
+        "outputId": "21f38eed-48d4-4172-eae0-b3783e941d74"
       },
       "outputs": [
         {
@@ -159,7 +159,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8109cb01-871f-4fcf-8d1f-12eaee270e8c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c95e749e-4e50-4045-8f83-213c6e73aea5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -268,7 +268,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8109cb01-871f-4fcf-8d1f-12eaee270e8c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c95e749e-4e50-4045-8f83-213c6e73aea5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -320,12 +320,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8109cb01-871f-4fcf-8d1f-12eaee270e8c button.colab-df-convert');\n",
+              "        document.querySelector('#df-c95e749e-4e50-4045-8f83-213c6e73aea5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8109cb01-871f-4fcf-8d1f-12eaee270e8c');\n",
+              "        const element = document.querySelector('#df-c95e749e-4e50-4045-8f83-213c6e73aea5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -345,8 +345,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-73a4d7ec-72d5-4572-93b9-a12266821813\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-73a4d7ec-72d5-4572-93b9-a12266821813')\"\n",
+              "<div id=\"df-8f41f105-6070-4ed1-b542-b8ff6fa3681e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8f41f105-6070-4ed1-b542-b8ff6fa3681e')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -465,7 +465,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-73a4d7ec-72d5-4572-93b9-a12266821813 button');\n",
+              "        document.querySelector('#df-8f41f105-6070-4ed1-b542-b8ff6fa3681e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 15
         }
       ],
       "source": [
@@ -1107,13 +1107,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "id": "PYdTjEvARUqj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d04221df-f904-421c-a953-d1a818830d7f"
+        "outputId": "225839f7-8522-430f-da2e-5e7742020587"
       },
       "outputs": [
         {
@@ -1178,7 +1178,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "STAR - what is up with the occupation data?"
+        "STAR - what is up with the occupation data? WHY IS IT A DOT"
       ],
       "metadata": {
         "id": "oNJxLzcvCihe"
@@ -1195,16 +1195,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VHmlNoBpRUqj",
-        "outputId": "9f1abc21-9bf0-47d7-894f-fcacb8765828"
+        "outputId": "718ed1a3-1daf-4f66-a369-1f1be8dd57db"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "occupation\n",
@@ -1224,9 +1225,8 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 9,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 16
         }
       ],
       "source": [
@@ -1241,6 +1241,8 @@
       },
       "source": [
         "What is the most common profession?\n",
+        "\n",
+        "i'm literally dying because why is the top occupation a dot. but anyway the one underneath it is office and admin support.\n",
         "\n",
         "\n",
         "# Distributions\n",
