--- a/notebooks/W05. Distributions and Basic Statistics.ipynb
+++ b/notebooks/W05. Distributions and Basic Statistics.ipynb
@@ -2748,11 +2748,11 @@
         "white_highschool_men.describe()"
       ],
       "metadata": {
-        "id": "AFlF9S4z84sJ",
-        "outputId": "32aa6e88-955b-449f-b770-6abe55fec04c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AFlF9S4z84sJ",
+        "outputId": "32aa6e88-955b-449f-b770-6abe55fec04c"
       },
       "execution_count": 78,
       "outputs": [
@@ -2782,11 +2782,11 @@
         "hispanic_BA_women.describe()"
       ],
       "metadata": {
-        "id": "KP6cDXJm9M1T",
-        "outputId": "227aa898-5a59-41f0-a102-8a1438076a1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KP6cDXJm9M1T",
+        "outputId": "227aa898-5a59-41f0-a102-8a1438076a1e"
       },
       "execution_count": 79,
       "outputs": [
@@ -2813,7 +2813,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The group that has the higher average income are the White Male High School Graduates (population mean approximately $45.9k). In comparsion the population mean income for Hispanic Women with a BA Degree is $42.9k."
+        "The group that has the higher average income are the White Male High School Graduates (population mean approximately $45.9k). In comparsion the population mean income for Hispanic Women with a BA Degree is $42.9k. However, the graphs do overlap... therefore we must test to see if these means are statistically significant..."
       ],
       "metadata": {
         "id": "DUu4Bcpk8s_T"
